Add geometry column type, rename table

--- a/examples/PostGIS Demo.ipynb
+++ b/examples/PostGIS Demo.ipynb
@@ -8,13 +8,7 @@
     "\n",
     "The following notebook demonstrates PostGIS functionality using the _Intake-Postgres_ plugin. Its purpose is to showcase a variety of scenarios in which an _Intake_ user may want to query their PostgreSQL-based relational datasets.\n",
     "\n",
-    "PostGIS functionality is to be exercised with the following geometry objects:\n",
-    "\n",
-    "* Point, MultiPoint\n",
-    "* LineString, MultiLineString\n",
-    "* Polygon, MultiPolygon\n",
-    "\n",
-    "There are other geometry objects such as `Geometry`, `CircularString`, `Curve`, `CurvePolygon`, `Surface`, `GeometryCollection`, etc.. but they are typically for more advanced use-cases.\n",
+    "PostGIS functionality is to be exercised with the following geometry objects: `POINT, LINESTRING, POLYGON, MULTIPOINT, MULTILINESTRING, MULTIPOLYGON`.\n",
     "\n",
     "\n",
     "## Setup\n",
@@ -72,6 +66,8 @@
     "from bokeh.models.tiles import WMTSTileSource\n",
     "from bokeh.io import output_notebook\n",
     "output_notebook()\n",
+    "\n",
+    "from shapely import wkt\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -143,14 +139,14 @@
     "    data = json.load(fp)\n",
     "\n",
     "cursor = conn.cursor()\n",
-    "cursor.execute('drop table if exists points')\n",
-    "cursor.execute('create table points (pt point not null, name text, address text, city text, state text, zip_code text, county text, directions text)')\n",
+    "cursor.execute('drop table if exists fortune500')\n",
+    "cursor.execute('create table fortune500 (location geometry(point, 4326), name text, address text, city text, state text, zip_code text, county text, directions text)')\n",
     "for feature in data['features']:\n",
     "    lon, lat = feature['geometry']['coordinates']\n",
     "    props = feature['properties']\n",
     "    zip_code, state, name, address, county, city, directions = props['ZIP'], props['STATE'], props['NAME'], props['ADDRESS'], props['COUNTY'], props['CITY'], props['DIRECTIONS']\n",
-    "    cursor.execute('insert into points values (%s, %s, %s, %s, %s, %s, %s, %s)',\n",
-    "        ('({} , {})'.format(lon, lat), name, address, city, state, zip_code, county, directions),\n",
+    "    cursor.execute('insert into fortune500 values (St_GeomFromText(%s), %s, %s, %s, %s, %s, %s, %s)',\n",
+    "        ('SRID=4326;POINT({} {})'.format(lon, lat), name, address, city, state, zip_code, county, directions),\n",
     "    )\n",
     "conn.commit()\n",
     "conn.close()"
@@ -170,7 +166,7 @@
    "outputs": [],
    "source": [
     "# Save each query from the `psql` command as HTML\n",
-    "!psql -h localhost -p 5432 -U postgres -q -H -c \"select * from points limit 5;\" > points.html\n",
+    "!psql -h localhost -p 5432 -U postgres -q -H -c \"select * from fortune500 limit 5;\" > points.html\n",
     "\n",
     "# Display the HTML files\n",
     "from IPython.display import display, HTML\n",
@@ -203,12 +199,12 @@
     "    - module: intake_postgres\n",
     "\n",
     "sources:\n",
-    "  - name: points\n",
+    "  - name: fortune500\n",
     "    driver: postgres\n",
     "    args:\n",
     "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
     "      sql_expr: |\n",
-    "          select * from points"
+    "          select * from fortune500"
    ]
   },
   {
@@ -233,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Points data\n",
+    "## Geography (point) data\n",
     "\n",
     "Here we inspect the data source metadata, read the data, and visualize it."
    ]
@@ -244,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catalog.points.discover()"
+    "catalog.fortune500.discover()"
    ]
   },
   {
@@ -261,7 +257,7 @@
    "outputs": [],
    "source": [
     "%time\n",
-    "points = catalog.points.read()\n",
+    "points = catalog.fortune500.read()\n",
     "points.tail()"
    ]
   },
@@ -278,13 +274,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "points['lon'] = points['location'].apply(lambda t: wkt.loads(t).x)\n",
+    "points['lat'] = points['location'].apply(lambda t: wkt.loads(t).y)\n",
     "points_source = ColumnDataSource(points)\n",
     "\n",
     "tilesource = WMTSTileSource(url='http://c.tile.openstreetmap.org/{Z}/{X}/{Y}.png')\n",
     "p = figure()\n",
     "p.axis.visible = False\n",
     "p.add_tile(tilesource)\n",
-    "p.circle('pt0', 'pt1', source=points_source)\n",
+    "p.circle('lon', 'lat', source=points_source)\n",
     "show(p)"
    ]
   },
