--- a/examples/PostGIS Demo.ipynb
+++ b/examples/PostGIS Demo.ipynb
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Geography (point) data\n",
+    "## Geometry (point) data\n",
     "\n",
     "Here we inspect the data source metadata, read the data, and visualize it."
    ]
