Convert lat/lon to mercator for viz with bokeh

--- a/examples/PostGIS Demo.ipynb
+++ b/examples/PostGIS Demo.ipynb
@@ -61,13 +61,13 @@
     "from intake.catalog import Catalog\n",
     "\n",
     "## For data viz\n",
-    "from bokeh.plotting import figure, show\n",
+    "from shapely import wkt\n",
+    "import numpy as np\n",
+    "import bokeh.plotting as bp\n",
     "from bokeh.models import ColumnDataSource\n",
-    "from bokeh.models.tiles import WMTSTileSource\n",
+    "from bokeh.models import WMTSTileSource, HoverTool\n",
     "from bokeh.io import output_notebook\n",
     "output_notebook()\n",
-    "\n",
-    "from shapely import wkt\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -265,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we visualize the data:"
+    "Next, we prepare the data for visualization. With the help of `numpy` and `shapely`, we can convert latitude / longitude coordinates into mercator (UTM), and pass the mercator coordinates to Bokeh for visualization:"
    ]
   },
   {
@@ -274,16 +274,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "points['lon'] = points['location'].apply(lambda t: wkt.loads(t).x)\n",
-    "points['lat'] = points['location'].apply(lambda t: wkt.loads(t).y)\n",
-    "points_source = ColumnDataSource(points)\n",
+    "%time\n",
     "\n",
+    "# Earth's radius, in meters\n",
+    "EARTH_RADIUS = 6378137.\n",
+    "\n",
+    "def lon_to_mercx(lon):\n",
+    "    x = EARTH_RADIUS * np.radians(lon)\n",
+    "    return x\n",
+    "\n",
+    "def lat_to_mercy(lon, lat):\n",
+    "    x = lon_to_mercx(lon)\n",
+    "    y = 180. / np.pi * np.log(np.tan(np.pi / 4. + lat * (np.pi / 180.) / 2.)) * x / lon\n",
+    "    return y\n",
+    "\n",
+    "def wkt_to_x(pt):\n",
+    "    return lon_to_mercx(wkt.loads(pt).x)\n",
+    "\n",
+    "def wkt_to_y(pt):\n",
+    "    point = wkt.loads(pt)\n",
+    "    return lat_to_mercy(point.x, point.y)\n",
+    "\n",
+    "points['y'] = np.vectorize(wkt_to_y)(points['location'].values)\n",
+    "points['x'] = np.vectorize(wkt_to_x)(points['location'].values)\n",
+    "points.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we visualize the data interactively with `bokeh`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points_source = ColumnDataSource(points)\n",
     "tilesource = WMTSTileSource(url='http://c.tile.openstreetmap.org/{Z}/{X}/{Y}.png')\n",
-    "p = figure()\n",
+    "p = bp.figure(width=800)\n",
     "p.axis.visible = False\n",
     "p.add_tile(tilesource)\n",
-    "p.circle('lon', 'lat', source=points_source)\n",
-    "show(p)"
+    "hover_tool = HoverTool(tooltips=[('Name', '@name'), ('Address', '@address, @city, @state, @zip_code')])\n",
+    "p.add_tools(hover_tool)\n",
+    "p.circle('x', 'y', source=points_source, size=10, fill_alpha=.2)\n",
+    "bp.show(p)"
    ]
   },
   {
