Change catalog syntax everywhere

--- a/examples/Basic Usage.ipynb
+++ b/examples/Basic Usage.ipynb
@@ -126,13 +126,13 @@
     "    - module: intake_postgres\n",
     "\n",
     "sources:\n",
-    "  - name: people\n",
+    "  people:\n",
     "    driver: postgres\n",
     "    args:\n",
     "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
     "      sql_expr: 'select * from person'\n",
     "    \n",
-    "  - name: last_names\n",
+    "  last_names:\n",
     "    driver: postgres\n",
     "    args:\n",
     "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
