--- a/examples/Joins Demo.ipynb
+++ b/examples/Joins Demo.ipynb
@@ -245,49 +245,49 @@
                 "\n",
                 "sources:\n",
                 "  # Normalized columns\n",
-                "  - name: term_codes\n",
+                "  term_codes:\n",
                 "    driver: postgres\n",
                 "    args:\n",
                 "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
                 "      sql_expr: 'select id, term from term_codes'\n",
                 "\n",
-                "  - name: home_ownership_codes\n",
+                "  home_ownership_codes:\n",
                 "    driver: postgres\n",
                 "    args:\n",
                 "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
                 "      sql_expr: 'select id, home_ownership from home_ownership_codes'\n",
                 "\n",
-                "  - name: verification_status_codes\n",
+                "  verification_status_codes:\n",
                 "    driver: postgres\n",
                 "    args:\n",
                 "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
                 "      sql_expr: 'select id, verification_status from verification_status_codes'\n",
                 "\n",
-                "  - name: loan_status_codes\n",
+                "  loan_status_codes:\n",
                 "    driver: postgres\n",
                 "    args:\n",
                 "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
                 "      sql_expr: 'select id, loan_status from loan_status_codes'\n",
                 "\n",
-                "  - name: addr_state_codes\n",
+                "  addr_state_codes:\n",
                 "    driver: postgres\n",
                 "    args:\n",
                 "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
                 "      sql_expr: 'select id, addr_state from addr_state_codes'\n",
                 "\n",
-                "  - name: application_type_codes\n",
+                "  application_type_codes:\n",
                 "    driver: postgres\n",
                 "    args:\n",
                 "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
                 "      sql_expr: 'select id, application_type from application_type_codes'\n",
                 "\n",
-                "  - name: disbursement_method_codes\n",
+                "  disbursement_method_codes:\n",
                 "    driver: postgres\n",
                 "    args:\n",
                 "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
                 "      sql_expr: 'select id, disbursement_method from disbursement_method_codes'\n",
                 "        \n",
-                "  - name: State_codes\n",
+                "  State_codes:\n",
                 "    driver: postgres\n",
                 "    args:\n",
                 "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
@@ -295,13 +295,13 @@
                 "\n",
                 "\n",
                 "  # loan_stats data\n",
-                "  - name: loans_1\n",
+                "  loans_1:\n",
                 "    driver: postgres\n",
                 "    args:\n",
                 "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
                 "      sql_expr: 'select issue_d, term, application_type, disbursement_method, home_ownership, verification_status, loan_status, loan_amnt, int_rate from loan_stats'\n",
                 "\n",
-                "  - name: loans_5\n",
+                "  loans_5:\n",
                 "    driver: postgres\n",
                 "    args:\n",
                 "      uri: 'postgresql://postgres@localhost:5436/postgres'\n",
@@ -309,13 +309,13 @@
                 "        \n",
                 "\n",
                 "  # reject_stats data\n",
-                "  - name: rejects_1\n",
+                "  rejects_1:\n",
                 "    driver: postgres\n",
                 "    args:\n",
                 "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
                 "      sql_expr: 'select \"Application Date\", \"State\", \"Amount Requested\" from reject_stats'\n",
                 "\n",
-                "  - name: rejects_5\n",
+                "  rejects_5:\n",
                 "    driver: postgres\n",
                 "    args:\n",
                 "      uri: 'postgresql://postgres@localhost:5436/postgres'\n",
@@ -323,7 +323,7 @@
                 "\n",
                 "\n",
                 "  # Joins\n",
-                "  - name: join_db_1_to_1\n",
+                "  join_db_1_to_1:\n",
                 "    driver: postgres\n",
                 "    parameters:\n",
                 "        - name: interest_lowbound\n",
