--- a/examples/PostGIS Demo.ipynb
+++ b/examples/PostGIS Demo.ipynb
@@ -199,7 +199,7 @@
     "    - module: intake_postgres\n",
     "\n",
     "sources:\n",
-    "  - name: fortune500\n",
+    "  fortune500:\n",
     "    driver: postgres\n",
     "    args:\n",
     "      uri: 'postgresql://postgres@localhost:5432/postgres'\n",
