fix parameters too

--- a/examples/Joins Demo.ipynb
+++ b/examples/Joins Demo.ipynb
@@ -326,7 +326,7 @@
                 "  join_db_1_to_1:\n",
                 "    driver: postgres\n",
                 "    parameters:\n",
-                "        - name: interest_lowbound\n",
+                "        interest_lowbound:\n",
                 "          description: \"Lower-bound for interest rate in query\"\n",
                 "          type: float\n",
                 "          default: 0.0\n",
